Change search from general search to id lookup
-scss changes

--- a/web/src/content/common/_common.scss
+++ b/web/src/content/common/_common.scss
@@ -1,9 +1,8 @@
 .label {
   @include bold-font;
-  text-align: right;
-  width: 100px;
-  margin-right: 5px;
-  display: inline-block;
+  text-align: left;
+  margin-left: 5px;
+  display: block;
 }
 
 .select {
