--- a/web/src/sass-helpers/_variables.scss
+++ b/web/src/sass-helpers/_variables.scss
@@ -30,3 +30,10 @@ $button-fill: $blue;
 $text-color: $black;
 
 $border-radius: 4px;
+
+$border-dark: $black 1px solid;
+$border-light: $white 1px solid;
+
+/* alternating table colors */
+$alternating-color-one: #6F94B3;
+$alternating-color-two: #91ABC1;
