--- a/web/src/sass-helpers/_mixins.scss
+++ b/web/src/sass-helpers/_mixins.scss
@@ -49,3 +49,8 @@
   font-weight: bold;
   font-size: $regular-font-size;
 }
+
+@mixin regular-font {
+  font-family: $regular-font;
+  font-size: $regular-font-size;
+}
