--- a/web/src/sass-helpers/_variables.scss
+++ b/web/src/sass-helpers/_variables.scss
@@ -1,4 +1,5 @@
 /* standard media query variables */
+$small-phone-max-width: 320px;
 $landscape-phone-and-below-max-width: 480px;
 $landscape-phone-to-portrait-tablet-max-width: 767px;
 $portrait-tablet-to-landscape-and-desktop-min-width: 768px;
@@ -35,5 +36,5 @@ $border-dark: $black 1px solid;
 $border-light: $white 1px solid;
 
 /* alternating table colors */
-$alternating-color-one: #6F94B3;
-$alternating-color-two: #91ABC1;
+$alternating-color-one: #CECEE0;
+$alternating-color-two: #DEDEEF;
