--- a/web/src/content/components/AlbumDetailsView/_AlbumDetailsView.scss
+++ b/web/src/content/components/AlbumDetailsView/_AlbumDetailsView.scss
@@ -1,14 +1,36 @@
 .album-details-view {
 
+  @media (min-width: $portrait-tablet-to-landscape-and-desktop-max-width){
+    width: 50%;
+    display: inline-block;
+    vertical-align: top;
+    height: calc(100vh - 70px);
+    overflow-y: auto;
+    overflow-x: hidden;
+
+
+  }
+
   .album-information {
     display: inline-block;
     vertical-align: top;
-    margin: 0px;
+    margin: 0;
     min-height: 100px;
 
+    .inline-label{
+      max-width: 400px;
+
+    }
+
+    @media (min-width: $portrait-tablet-to-landscape-and-desktop-min-width) and (max-width: $large-desktop-min-width){
+      .inline-label {
+        max-width: 300px;
+      }
+    }
+
     @media (max-width: $small-phone-max-width) {
-      width: 220px;
-      margin: 0px;
+      width: 215px;
+      margin: 0;
 
       .inline-label {
         max-width: 155px;
@@ -18,7 +40,7 @@
 
     @media (max-width: $landscape-phone-and-below-max-width) {
       .inline-label {
-        max-width: 194px;
+        max-width: 189px;
         vertical-align: top;
       }
     }
@@ -28,15 +50,12 @@
   .album-info-artwork {
     display: inline-block;
     float: right;
+    margin-right: 5px;
   }
 
   .album-details {
-    width: 75vw;
     margin: 10px auto;
 
-    @media (max-width: $portrait-tablet-to-landscape-and-desktop-max-width) {
-      width: 100vw;
-    }
   }
 
 }
