--- a/web/src/main.scss
+++ b/web/src/main.scss
@@ -11,6 +11,7 @@
 @import 'content/components/ArtistsAlbumCollection/AlbumCollection/_AlbumCollection';
 @import 'content/components/AlbumDetailsView/_AlbumDetailsView';
 @import 'content/components/ArtistsAlbumCollection/_ArtistAlbumCollection';
+@import 'content/components/ArtistSearch/_ArtistSearch';
 
 body {
   margin: 0;
